--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "types": ["node", "vite/client"],
     "paths": {
       "@/*": ["./client/src/*"],
-      "@shared/*": ["./shared/*"]
+      "@shared/*": ["./shared/*"],
+      "@shared/schema": ["shared/schema.ts"]
     }
   }
 }
