--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx index.ts",
     "build": "rimraf dist && esbuild index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "cross-env NODE_ENV=production tsx index.ts",
+    "start": "cross-env NODE_ENV=production tsx --project ../tsconfig.json index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -29,6 +29,7 @@
     "pg": "^8.15.6",
     "process": "^0.11.10",
     "stripe": "^18.1.0",
+    "tsconfig-paths": "^4.2.0",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
