--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx index.ts",
     "build": "rimraf dist && esbuild index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "cross-env NODE_ENV=production tsx --project ../tsconfig.json index.ts",
+    "start": "cross-env NODE_ENV=production tsx ../tsconfig.json index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
