--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx ../tsconfig.json index.ts",
+    "dev": "cross-env NODE_ENV=development tsx index.ts",
     "build": "rimraf dist && esbuild index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "cross-env NODE_ENV=production tsx ../tsconfig.json index.ts",
+    "start": "cross-env NODE_ENV=production tsx index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
