--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,7 +18,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@shared/*": ["../shared/*"],
+      "@shared/*": ["../server/shared/*"],
       "@assets/*": ["../attached_assets/*"]
     }
   },
